[package]
name = "parka"
version = "0.1.0"
authors = ["juniper wilde <juniper.r.wilde@gmail.com>"]
description = ""
license = "MIT"
keywords = ["javascript", "js", "runtime"]
homepage = "https://github.com/rosegardencult/parka"
repository = "https://github.com/rosegardencult/parka"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
libc = "*"
